# variantly

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: derive.rs  error.rs  idents.rs  input.rs  lib.rs
src/variantly_derive/: Cargo.toml
src/variantly_derive/src/: derive.rs  idents.rs  lib.rs  parse_input.rs
tests/: derived.rs  derived_and.rs  derived_and_then.rs  derived_expect.rs  derived_is_and_is_not.rs  derived_mut.rs  derived_ok.rs  derived_ok_mut_or.rs  derived_ok_mut_or_else.rs  derived_ok_or.rs  derived_ok_or_else.rs  derived_ok_ref_or.rs  derived_ok_ref_or_else.rs  derived_or.rs  derived_or_else.rs  derived_ref.rs  derived_unwrap.rs  derived_unwrap_or_else.rs  example.rs  helper.rs  std_imports.rs
