[package]
authors = ["Luke Roberts <lukeroberts.j@gmail.com>"]
edition = "2018"
name = "variantly"
version = "0.1.0"
[dependencies]
Inflector = "*"
proc-macro2 = "*"
quote = "*"

[dependencies.syn]
features = ["full"]
version = "*"

[dependencies.uuid]
features = ["v4"]
version = "*"

[lib]
proc-macro = true
